--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,10 @@ spring:
   liquibase:
     enabled: false
 
+security:
+  oauth2:
+    client:
+      client-id: clientId
+      client-secret: clientSecret
+      authorized-grant-types: authorization_code, refresh_token, password
+      scope: openid
