set context path

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,8 @@
+server:
+  servlet:
+    context-path: /employer
 spring:
   port: 8080
-  servlet:
-    contextPath: /employer
   liquibase:
     enabled: false
 
