--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
         <io.springfox.version>3.0.0</io.springfox.version>
         <apache.commons.version>3.10</apache.commons.version>
+        <spring.oauth2.version>2.1.0.RELEASE</spring.oauth2.version>
     </properties>
     <dependencies>
         <dependency>
@@ -28,6 +29,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security.oauth.boot</groupId>
+            <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+            <version>${spring.oauth2.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -86,6 +92,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${apache.commons.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>2.0.2</version>
         </dependency>
     </dependencies>
 
