--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <java.version>1.8</java.version>
         <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
         <io.springfox.version>3.0.0</io.springfox.version>
+        <io.springfox.ui.version>3.0.0</io.springfox.ui.version>
         <apache.commons.version>3.10</apache.commons.version>
         <spring.oauth2.version>2.1.0.RELEASE</spring.oauth2.version>
     </properties>
