Add Jupiter and mockito at POM

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,9 @@
         <apache.commons.version>3.10</apache.commons.version>
         <spring.oauth2.version>2.1.0.RELEASE</spring.oauth2.version>
         <org.projectlombok.version>1.18.18</org.projectlombok.version>
+        <org.junit.jupiter.version>5.7.1</org.junit.jupiter.version>
+        <org.mockito.core.version>2.23.4</org.mockito.core.version>
+        <org.mockito.jupiter.version>2.17.0</org.mockito.jupiter.version>
     </properties>
     <dependencies>
         <dependency>
@@ -105,6 +108,40 @@
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
             <version>2.0.2</version>
+        </dependency>
+
+        <!-- JUnit 5 (Jupiter) -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${org.junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>${org.junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${org.junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Mockito -->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${org.mockito.core.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${org.mockito.jupiter.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
